--- a/basic/.travis.yml
+++ b/basic/.travis.yml
@@ -4,6 +4,9 @@ php:
     - "7.4"
     - "8.0"
 
+install:
+    - composer require --prefer-dist --dev "codeception/codeception *" "codeception/specify *"
+
 before_script:
     - php vendor/bin/codecept build
 
